# opengl-snake

./: .gitignore  CMakeLists.txt  CMakeSettings.json
res/shader/: default.frag  default.vert
src/: const.hpp  drawable.cpp  drawable.hpp  graphics_object.hpp  index_buffer.cpp  input_manager.cpp  input_manager.hpp  io.cpp  io.hpp  logger.cpp  logger.hpp  main.cpp  model.cpp  model.hpp  shader.cpp  snake.cpp  snake.hpp  vertex_array.cpp  vertex_buffer.cpp
